[package]
name = "oxibot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.5.2"
tokio = { version = "1.23.0", features = [ "signal" ] }
dotenvy = "0.15.6"
dashmap = "5.4.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = [ "env-filter" ] }
rand = "0.8.5"

[dependencies.sqlx]
version = "0.6.2"
features = [ "macros", "runtime-tokio-rustls", "postgres", "offline" ]

[profile.dev.package.sqlx-macros]
opt-level = 3
